# llm-model-hosting-demo

./: cdk.json  package-lock.json  package.json
lib/: model-hosting-stack.ts
python/llm-inference/: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
python/llm-inference/docs/: conf.py  index.rst
python/llm-inference/src/llm_inference/: __init__.py  skeleton.py
python/llm-inference/tests/: conftest.py  test_skeleton.py
